web/src/repo/_Blob.scss
.blob {
    flex: 1 1 50%;
    min-height: 0;

    display: flex;
    position: relative;
    overflow: auto;
    padding: 1rem 0;

    table {
        border-collapse: collapse;

        white-space: pre;
        background-color: #151D28;
        font-family: 'Menlo';
        font-size: 12px;
        line-height: 20px;
    }

    td.line {
        &::before {
            // draw line number with css so it cannot be copied to clipboard
            content: attr(data-line);
            color: #31445E;
        }

        color: #31445E;
        text-align: right;
        padding-left: 1rem;
        min-width: 3em;
    }

    td.line, td.code {
        padding: 0;
    }

    td.code {
        width: 100%;
        padding-left: 1rem;
        white-space: pre;
        >.blame {
            &::before {
                content: attr(data-blame);
                cursor: pointer;
            }
            color: #464d57;
            padding-left: 4em;
            display: inline-block;
            width: 0;
        }
    }

    .right {
        background-color: #151D28;
        flex: 4;
    }
}

